--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,7 @@
 }
 
 body {
-    background-color: #e1e1e1;
+    background-color: #f1f1f1;
 }
 
 /* navbar */
@@ -40,11 +40,14 @@ body {
 }
 
 #navbar ul li a {
+    border-radius: 5px;
+    padding: 8px 20px;
     transition: 0.2s ease-in;
 }
 
 #navbar li a:hover {
-    color: var(--secondary);
+    color: var(--text);
+    background: var(--secondary);
 }
 
 #navbar ul {
@@ -52,7 +55,6 @@ body {
 }
 
 #navbar ul li {
-    margin: 0 24px;
     padding: 0 10px;
     font-size: 18px;
     font-weight: 600;
@@ -101,4 +103,100 @@ body {
     #navbar #links.active ul li {
         margin: 50px 0;
     }
+}
+
+/* footer */
+footer {
+    /* position: absolute;
+    bottom: 0; */
+    /* width: 100%; */
+    padding: 50px 0;
+    color: var(--text);
+    background-color: var(--primary);
+}
+
+footer p {
+    font-weight: 300;
+    text-align: center;
+}
+
+/* homepage */
+#main {
+    display: grid;
+    height: calc(100vh - 80px);
+    grid-template-columns: 60% 40%;
+}
+
+/* table */
+table {
+    width: 90%;
+    margin: 80px auto 0 auto;
+    padding: 16px 0;
+    text-align: center;
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.06);
+}
+
+th {
+    font-size: 18px;
+}
+
+th, td {
+    padding: 16px 20px;
+}
+
+.todo {
+    width: 70%;
+}
+
+.actions {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.actions span {
+    font-size: 28px;
+}
+
+/* form */
+form h1 {
+    font-size: 26px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+form {
+    width: 90%;
+    margin: 80px auto 0 auto;
+    padding: 30px 24px;
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.06);
+}
+
+form label {
+    font-size: 18px;
+    font-weight: 600;
+}
+
+form input {
+    display: block;
+    width: 90%;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: 1px solid #c1c1c1;
+    border-radius: 5px;
+}
+
+form button {
+    margin: 10px 0;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
+    font-weight: 600;
+    color: var(--text);
+    background-color: var(--secondary);
+    cursor: pointer;
 }
