--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,30 +107,31 @@ body {
 
 /* footer */
 footer {
-    /* position: absolute;
-    bottom: 0; */
-    /* width: 100%; */
+    margin-top: 0px;
+    width: 100%;
+    height: 120px;
     padding: 50px 0;
     color: var(--text);
     background-color: var(--primary);
 }
 
 footer p {
-    font-weight: 300;
     text-align: center;
+    font-weight: 300;
 }
 
 /* homepage */
 #main {
     display: grid;
-    height: calc(100vh - 80px);
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 3fr 2fr;
+    padding: 80px 0;
+    min-height: calc(100vh - 200px);
 }
 
 /* table */
 table {
     width: 90%;
-    margin: 80px auto 0 auto;
+    margin: 0 auto;
     padding: 16px 0;
     text-align: center;
     border-radius: 5px;
@@ -153,45 +154,59 @@ th, td {
 .actions {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .actions span {
-    font-size: 28px;
+    color: black;
+    font-size: 32px;
+    cursor: pointer;
+}
+
+.delete button {
+    border: none;
+    background-color: #fff;
 }
 
 /* form */
-form h1 {
+.edit-form h1, 
+.input-form h1 {
     font-size: 26px;
     text-align: center;
     margin-bottom: 20px;
 }
 
-form {
+.edit-form, 
+.input-form {
     width: 90%;
-    margin: 80px auto 0 auto;
+    margin: 0 auto;
     padding: 30px 24px;
     border-radius: 5px;
     background: #fff;
     box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.06);
 }
 
-form label {
+.edit-form label, 
+.input-form label {
+    display: block;
     font-size: 18px;
     font-weight: 600;
+    margin-bottom: 4px;
 }
 
-form input {
+.edit-form input, 
+.input-form input {
     display: block;
-    width: 90%;
+    width: 100%;
     padding: 10px 20px;
     font-size: 16px;
     border: 1px solid #c1c1c1;
     border-radius: 5px;
 }
 
-form button {
-    margin: 10px 0;
+.edit-form button, 
+.input-form button {
+    margin-top: 18px;
     padding: 12px 20px;
     border: none;
     border-radius: 5px;
@@ -199,4 +214,14 @@ form button {
     color: var(--text);
     background-color: var(--secondary);
     cursor: pointer;
+}
+
+/* edit */
+#edit-main {
+    padding: 100px 0;
+    min-height: calc(100vh - 200px);
+}
+
+.edit-form {
+    width: 50%;
 }
