--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,13 +39,8 @@ body {
     color: var(--text);
 }
 
-#navbar ul li a {
-    border-radius: 5px;
-    padding: 8px 20px;
-    transition: 0.2s ease-in;
-}
-
-#navbar li a:hover {
+#navbar li:hover, 
+#navbar .logout button:hover {
     color: var(--text);
     background: var(--secondary);
 }
@@ -54,10 +49,17 @@ body {
     display: flex;
 }
 
-#navbar ul li {
-    padding: 0 10px;
+#navbar ul li, 
+#navbar .logout button {
+    border-radius: 5px;
+    margin: 0 10px;
+    padding: 10px 16px;
     font-size: 18px;
     font-weight: 600;
+    cursor: pointer;
+    color: var(--text);
+    transition: 0.2s ease-in;
+    background-color: inherit;
 }
 
 #navbar #hamburger {
@@ -163,13 +165,16 @@ th, td {
     cursor: pointer;
 }
 
-.delete button {
+.delete button,
+.logout button {
     border: none;
     background-color: #fff;
 }
 
 /* form */
 .edit-form h1, 
+.login-form h1, 
+.register-form h1, 
 .input-form h1 {
     font-size: 26px;
     text-align: center;
@@ -177,6 +182,8 @@ th, td {
 }
 
 .edit-form, 
+.login-form, 
+.register-form, 
 .input-form {
     width: 90%;
     margin: 0 auto;
@@ -187,6 +194,8 @@ th, td {
 }
 
 .edit-form label, 
+.login-form label, 
+.register-form label, 
 .input-form label {
     display: block;
     font-size: 18px;
@@ -195,6 +204,8 @@ th, td {
 }
 
 .edit-form input, 
+.login-form input, 
+.register-form input, 
 .input-form input {
     display: block;
     width: 100%;
@@ -205,6 +216,8 @@ th, td {
 }
 
 .edit-form button, 
+.login-form button, 
+.register-form button, 
 .input-form button {
     margin-top: 18px;
     padding: 12px 20px;
@@ -218,10 +231,29 @@ th, td {
 
 /* edit */
 #edit-main {
-    padding: 100px 0;
+    padding: 80px 0;
     min-height: calc(100vh - 200px);
 }
 
+.login-form, 
+.register-form, 
 .edit-form {
     width: 50%;
+}
+
+/* login */
+#login-main {
+    padding: 80px 0;
+    min-height: calc(100vh - 200px);
+}
+
+.login-form input, 
+.register-form input {
+    margin-bottom: 18px;
+}
+
+/* register */
+#register-main {
+    padding: 80px 0;
+    min-height: calc(100vh - 200px);
 }
